assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
    box-sizing: border-box;
}

body {
    font-family: Poppins, sans-serif;
    font-weight: 300;
    color: #2a2a2a;
    display: flex;
    flex-direction: column;
}

/* logo and headings */

h1, h2, h3 {
    letter-spacing: 3px;
}

#logo {
    color: black;
    float: left;
    font-size: 220%;
    flex:auto
}

/* nav links */

#menu {
    letter-spacing: 3px;
    font-size: 115%;
}

menu, #logo {
    line-height: 50px;
}

#menu li {
    list-style-type: none;
    margin-top: 20px;
    margin-right: 35px;
    float: right;
}

#menu a {
    text-decoration: none;
    color: #2a2a2a;
}

#menu a:hover {
    border-bottom: 1px solid #2a2a2a;
}

.active {
    border-bottom: 1px solid #2a2a2a;
}

/* Main content*/

#main {
    margin-top: 50px;
    flex: 1 0 auto;
}
/* Main image */

#main-image {
    height: 500px;
    width: 100%;
    background: url("../images/Volleyball-cover.jpg") center center/cover no-repeat;
    position:absolute;
}

#club-info-box {
    background-color: rgba(213, 126, 234, .8);
    position:relative;
    top: 20px;
    width:40%;
    padding-left: 10px;
    padding-top: 5px;
    padding-bottom:5px;
    color: white;
}

